--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link type="text/css" href="/static/css/sb-admin-2.css" rel="stylesheet">
+    <link type="text/css" href="/static/css/sb-admin-2.css" rel="stylesheet" />
     <link type="text/css" href="/static/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/static/css/temp.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/temp.css" />
     {% block css %}
     {% endblock %}
 </head>
@@ -218,5 +218,6 @@
 {{ moment.include_moment() }}
 {% block scripts %}
 {% endblock %}
+<script type="text/javascript">$(function () {$('[data-toggle="tooltip"]').tooltip()})</script>
 </body>
 </html>
