--- a/app/templates/deployments.html
+++ b/app/templates/deployments.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block heading %}
-{% if current_user.has_permission('supervisor') %}
+{% if current_user.has_permission('create_deployment') %}
 <a href="#newDeploymentModal" data-toggle="modal" data-target="newDeploymentModal" class="btn btn-icon-split btn-success mb-1 mt-2">
     <span class="btn-icon">
         <i class="fas fa-plus"></i>
